--- a/HoneyChef.Api/HoneyChef.Api.csproj
+++ b/HoneyChef.Api/HoneyChef.Api.csproj
@@ -32,6 +32,7 @@
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
+		<PackageReference Include="MongoDB.Driver" Version="3.2.1" />
 		<PackageReference Include="Polly" Version="8.3.1" />
 		<PackageReference Include="Serilog" Version="3.1.1" />
 		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.4" />
@@ -45,7 +46,6 @@
   <ItemGroup>
     <Folder Include="Controllers\" />
 	  <Folder Include="Migrations\" />
-	  <Folder Include="Persistence\Configurations\" />
 	  <Folder Include="Repositories\Interfaces\Bases\" />
 	  <Folder Include="Repositories\Bases\" />
   </ItemGroup>
