example controller and fixed base ent

--- a/HoneyChef.Api/appsettings.json
+++ b/HoneyChef.Api/appsettings.json
@@ -26,10 +26,10 @@
     "DbConnection": "Server=DESKTOP-1MGEM44;Database=HoneyChef;TrustServerCertificate=True;Trusted_Connection=True;"
    //"DbConnection": "Data Source=DESKTOP-1BHITDP; Initial Catalog=HoneyChef;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
     },
-    "Config": {
-        "Directory": "C:\\Upload",
-        "Url": "http://0.0.0.0:8080/upload"
-    },
+    // "Config": {
+    //     "Directory": "C:\\Upload",
+    //     "Url": "http://0.0.0.0:8080/upload"
+    // },
     "CacheSettings": {
         "ConnectionString": "localhost:6379"
     },
@@ -38,10 +38,10 @@
         "Limits": {
             "MaxRequestBodySize": 52428800
         },
-        "Endpoints": {
-            "Http": {
-                "Url": "http://0.0.0.0:5000"
-            }
-        }
+        // "Endpoints": {
+        //     "Http": {
+        //         "Url": "http://0.0.0.0:5000"
+        //     }
+        // }
     }
 }
