--- a/HoneyChef.Api/appsettings.Development.json
+++ b/HoneyChef.Api/appsettings.Development.json
@@ -8,7 +8,7 @@
     "rootUploadsThumbs": "uploads/thumbs",
     "baseUrlImg": "/uploads/images/",
     "baseUrlImgThumb": "/uploads/thumbs/",
-    "baseUrlFile": "uploads/files/",
+    "baseUrlFile": "uploads/files/"
     
   },
   "Serilog": {
@@ -21,8 +21,8 @@
     }
   },
   "ConnectionStrings": {
-    "DbConnection": "Data Source=DESKTOP-1BHITDP; Initial Catalog=HoneyChef;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-    //"DbConnection": "Server=DESKTOP-1MGEM44;Database=HoneyChef;TrustServerCertificate=True;Trusted_Connection=True;"
+    //"DbConnection": "Data Source=DESKTOP-1BHITDP; Initial Catalog=HoneyChef;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DbConnection": "Server=DESKTOP-1MGEM44;Database=HoneyChef;TrustServerCertificate=True;Trusted_Connection=True;"
 
   },
   "CacheSettings": {
