--- a/HoneyChef.Api/appsettings.json
+++ b/HoneyChef.Api/appsettings.json
@@ -34,10 +34,15 @@
         "ConnectionString": "localhost:6379"
     },
     "AllowedHosts": "*",
+    "Cloudinary":{
+      "CloudName":"db0sdo295",
+      "ApiKey":"131269935646771",
+      "ApiSecret":"n5zh24uc65R5uMyW77GNOQikd3Q"
+    },
     "Kestrel": {
         "Limits": {
             "MaxRequestBodySize": 52428800
-        },
+        }//,
         // "Endpoints": {
         //     "Http": {
         //         "Url": "http://0.0.0.0:5000"
